syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true; // For julia client
option java_package = "lambdarpc.transport.grpc";
package lambdarpc.transport.grpc;

enum ExecuteType {
  FUNCTION_ERROR = 0;
  TIMEOUT_ERROR = 1;
  WRONG_SERVICE_ERROR = 2;
  SERIALIZATION_ERROR = 3;
  INTERNAL_ERROR = 4;
}

message ExecuteError {
  ExecuteType type = 1;
  string message = 2;
}
